mudanca no style.css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="add-task-container">
         <input type="text" id="task-input" placeholder="Enter task name">
         <button onclick="addTask()">+</button>
+        <button id="save-to-localstorage-btn">Salvar no LocalStorage</button>
         <button onclick="saveTasks()">Salvar</button>
     </div>
 
